// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExerciseList component Clicking on a row should match the snapshot 1`] = `
<_ExerciseList
  list={
    Array [
      Object {
        "exerciseKey": "xxy",
        "name": "Push-ups",
        "reps": 20,
        "restTime": 90,
        "results": Array [],
        "sets": 5,
        "weight": 0,
      },
      Object {
        "exerciseKey": "xyy",
        "name": "Australian pull-ups",
        "reps": 12,
        "restTime": 30,
        "results": Array [],
        "sets": 5,
        "weight": 0,
      },
    ]
  }
  onOrderChangeClick={[Function]}
  title="Some title"
>
  <div>
    <ExerciseListHeader
      title="Some title"
    >
      <div
        data-css-1blrzta=""
        data-test="list-title"
      >
        <div
          data-css-1dke3ly=""
        />
        <div
          data-css-iqmdqc=""
        >
          Some title
        </div>
      </div>
    </ExerciseListHeader>
    <ul
      data-css-1rl8e2c=""
      data-test="list"
    >
      <_ExerciseListRow
        exerciseKey="xxy"
        name="Push-ups"
        onRowClick={[Function]}
        reps={20}
        restTime={90}
        results={Array []}
        sets={5}
        weight={0}
      >
        <li
          data-css-wd60qt=""
          data-test="exercise-row-xxy"
          onClick={[Function]}
        >
          <div
            data-css-12buxqa=""
          >
            <div
              data-css-ikdvzh=""
            />
            <div
              data-css-1hvluh9=""
            />
          </div>
          <div
            data-css-eypxw5=""
          >
            <div
              data-css-1vhzv1k=""
            >
              Push-ups
            </div>
            <div
              data-css-1q1fiqx=""
              data-test="exercise-details"
            >
              0
               kg x 
              20
               reps x 
              5
               sets
            </div>
          </div>
        </li>
      </_ExerciseListRow>
      <_ExerciseListRow
        exerciseKey="xyy"
        name="Australian pull-ups"
        onRowClick={[Function]}
        reps={12}
        restTime={30}
        results={Array []}
        sets={5}
        weight={0}
      >
        <li
          data-css-wd60qt=""
          data-test="exercise-row-xyy"
          onClick={[Function]}
        >
          <div
            data-css-12buxqa=""
          >
            <div
              data-css-ikdvzh=""
            />
            <div
              data-css-1hvluh9=""
            />
          </div>
          <div
            data-css-eypxw5=""
          >
            <div
              data-css-1vhzv1k=""
            >
              Australian pull-ups
            </div>
            <div
              data-css-1q1fiqx=""
              data-test="exercise-details"
            >
              0
               kg x 
              12
               reps x 
              5
               sets
            </div>
          </div>
        </li>
      </_ExerciseListRow>
    </ul>
  </div>
</_ExerciseList>
`;

exports[`ExerciseList component should have list header 1`] = `
<ExerciseListHeader
  title="Some title"
/>
`;

exports[`ExerciseList component should render without crashing 1`] = `
<div>
  <ExerciseListHeader
    title="Some title"
  />
  <ul
    data-css-1rl8e2c=""
    data-test="list"
  >
    <_ExerciseListRow
      exerciseKey="xxy"
      name="Push-ups"
      onRowClick={[Function]}
      reps={20}
      restTime={90}
      results={Array []}
      sets={5}
      weight={0}
    />
    <_ExerciseListRow
      exerciseKey="xyy"
      name="Australian pull-ups"
      onRowClick={[Function]}
      reps={12}
      restTime={30}
      results={Array []}
      sets={5}
      weight={0}
    />
  </ul>
</div>
`;
